# pytex

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  sand.ipynb
app/: __init__.py  __main__.py  constants.py  main.py
app/core/: __init__.py  config.py  logging_config.py  redis_helper.py
app/handlers/: _depends.py  hw1_handlers.py  main_handlers.py
app/models/: job_model.py
app/services/: hw1_service.py  legacy_client.py
tests/: .coveragerc  conftest.py
tests/app/handlers/: test_hw1_handlers.py  test_main.py
tests/app/services/: test_hw1_service.py
