[project]
name = "pytex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "jupyter>=1.1.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]
